--- a/main/site1.html
+++ b/main/site1.html
@@ -103,11 +103,7 @@
         <!-- sidebar-->
         <section class="sidebar position-relative">
             <div class="user-profile px-10 py-15">
-                <div class="d-flex align-items-center">
-                    <div class="image">
-                        <img src="../images/avatar/avatar-11.png" class="avatar avatar-lg bg-primary-light"
-                             alt="User Image">
-                    </div>
+                <div class="d-flex align-items-center justify-content-center">
                     <div class="info ms-10">
                         <!--                        <p class="mb-0">Welcome</p>-->
                         <h5 class="mb-0" id="signedUser"></h5>
@@ -138,7 +134,7 @@
                                 <li><a href="site3.html"><i class="ti-more"></i>Site 3</a></li>
                                 <li><a href="site4.html"><i class="ti-more"></i>Site 4</a></li>
                                 <li><a href="site5.html"><i class="ti-more"></i>Site 5</a></li>
-                                <!--                                <li><a href="site6.html"><i class="ti-more"></i>Site 6</a></li>-->
+                                <li><a href="site6.html"><i class="ti-more"></i>Site 6</a></li>
                             </ul>
                         </li>
 
@@ -348,7 +344,7 @@
                         <th class="searchable-column">نوع الشحنة</th>
                         <th class="searchable-column">اسم الصنف</th>
                         <th class="searchable-column">العميل</th>
-<!--                        <th class="searchable-column">المحافظة</th>-->
+                        <!--                        <th class="searchable-column">المحافظة</th>-->
                         <th class="searchable-column">اسم السائق</th>
                         <th class="searchable-column">رقم السيارة</th>
                         <th class="searchable-column">الوزن الاول (طن)</th>
