--- a/main/index.html
+++ b/main/index.html
@@ -89,11 +89,7 @@
         <!-- sidebar-->
         <section class="sidebar position-relative">
             <div class="user-profile px-10 py-15">
-                <div class="d-flex align-items-center">
-                    <div class="image">
-                        <img src="../images/avatar/avatar-11.png" class="avatar avatar-lg bg-primary-light"
-                             alt="User Image">
-                    </div>
+                <div class="d-flex align-items-center justify-content-center">
                     <div class="info ms-10">
                         <h5 class="mb-0" id="signedUser"></h5>
                     </div>
