--- a/main/index.html
+++ b/main/index.html
@@ -119,7 +119,7 @@
                                 <li><a href="site3.html"><i class="ti-more"></i>Site 3</a></li>
                                 <li><a href="site4.html"><i class="ti-more"></i>Site 4</a></li>
                                 <li><a href="site5.html"><i class="ti-more"></i>Site 5</a></li>
-                                <!--                                <li><a href="site6.html"><i class="ti-more"></i>Site 6</a></li>-->
+                                <li><a href="site6.html"><i class="ti-more"></i>Site 6</a></li>
                             </ul>
                         </li>
 
@@ -169,7 +169,8 @@
                             <div class="box-body">
                                 <div class="d-flex align-items-center justify-content-between">
                                     <div style="color:#003f5c; margin: auto">
-                                        <h5 class="mb-0" style="font-weight: bold">نسبة المرفوضات من المخلفات الصالحة للمعالجة
+                                        <h5 class="mb-0" style="font-weight: bold">نسبة المرفوضات من المخلفات الصالحة
+                                            للمعالجة
                                         </h5>
                                         <h2 class="mb-0" id="rejected_per"></h2>
                                     </div>
@@ -245,14 +246,14 @@
 <!-- ./wrapper -->
 
 <script src="js/authentication.js"></script>
-<!--<script>-->
-<!--    isAuthenticated()-->
-<!--        .then(function (authenticated) {-->
-<!--            if (!authenticated) {-->
-<!--                window.location.href = 'login.html';-->
-<!--            }-->
-<!--        });-->
-<!--</script>-->
+<script>
+    isAuthenticated()
+        .then(function (authenticated) {
+            if (!authenticated) {
+                window.location.href = 'login.html';
+            }
+        });
+</script>
 
 <!-- Vendor JS -->
 <script src="js/vendors.min.js"></script>
