--- a/main/site3.html
+++ b/main/site3.html
@@ -347,9 +347,9 @@
                         <!--                        <th class="searchable-column">المحافظة</th>-->
                         <th class="searchable-column">اسم السائق</th>
                         <th class="searchable-column">رقم السيارة</th>
-                        <th class="searchable-column">الوزن الاول (طن)</th>
-                        <th class="searchable-column">الوزن الثاني (طن)</th>
-                        <th class="searchable-column">صافي الوزن (طن)</th>
+                        <th class="searchable-column">الوزن الاول (كجم)</th>
+                        <th class="searchable-column">الوزن الثاني (كجم)</th>
+                        <th class="searchable-column">صافي الوزن (كجم)</th>
                         <th class="searchable-column">التاريخ</th>
                         <th class="searchable-column">وقت الوزن الأول</th>
                         <th class="searchable-column">وقت الوزن الثانى</th>
