--- a/main/site1.html
+++ b/main/site1.html
@@ -144,7 +144,7 @@
                 <li class="treeview">
                   <a href="#">
                     <i class="ti-dashboard"></i>
-                    <span>Sites</span>
+                    <span>المصانع</span>
                     <span class="pull-right-container">
                       <i class="fa fa-angle-right pull-right"></i>
                     </span>
