--- a/main/site4.html
+++ b/main/site4.html
@@ -143,7 +143,7 @@
                 <li class="treeview">
                   <a href="#">
                     <i class="ti-dashboard"></i>
-                    <span>Sites</span>
+                    <span>المصانع</span>
                     <span class="pull-right-container">
                       <i class="fa fa-angle-right pull-right"></i>
                     </span>
@@ -414,18 +414,12 @@
             </div>
 
             <div
-                    class="input-group mb-3"
-                    style="display: none;position: absolute; right: 35%"
-                    id="datatableDatePickerGroup"
+              class="input-group mb-3"
+              style="display: none; position: absolute; right: 35%"
+              id="datatableDatePickerGroup"
             >
-              <span>
-                التاريخ:
-              </span>
-              <input
-                      type="text"
-                      id="datatableDatePicker"
-                      placeholder=""
-              />
+              <span> التاريخ: </span>
+              <input type="text" id="datatableDatePicker" placeholder="" />
             </div>
 
             <table id="site4_table" class="table table-striped table-bordered">
