--- a/main/site5.html
+++ b/main/site5.html
@@ -143,7 +143,7 @@
                 <li class="treeview">
                   <a href="#">
                     <i class="ti-dashboard"></i>
-                    <span>Sites</span>
+                    <span>المصانع</span>
                     <span class="pull-right-container">
                       <i class="fa fa-angle-right pull-right"></i>
                     </span>
@@ -415,17 +415,11 @@
 
             <div
               class="input-group mb-3"
-              style="display: none;position: absolute; right: 35%"
+              style="display: none; position: absolute; right: 35%"
               id="datatableDatePickerGroup"
             >
-              <span>
-                التاريخ:
-              </span>
-              <input
-                type="text"
-                id="datatableDatePicker"
-                placeholder=""
-              />
+              <span> التاريخ: </span>
+              <input type="text" id="datatableDatePicker" placeholder="" />
             </div>
 
             <table id="site5_table" class="table table-striped table-bordered">
