--- a/main/index.html
+++ b/main/index.html
@@ -176,7 +176,7 @@
                                 <div
                                         class="d-flex align-items-center justify-content-between"
                                 >
-                                    <div style="color: #ef5675; margin: auto">
+                                    <div style="color: #ef601c; margin: auto">
                                         <h5 class="mb-0" style="font-weight: bold">
                                             اجمالى المدخلات
                                         </h5>
@@ -192,7 +192,7 @@
                                 <div
                                         class="d-flex align-items-center justify-content-between"
                                 >
-                                    <div style="color: #7a5195; margin: auto">
+                                    <div style="color: #003f5c; margin: auto">
                                         <h5 class="mb-0" style="font-weight: bold">
                                             نسبة المخلفات الصالحة للمعالجة
                                         </h5>
@@ -226,7 +226,7 @@
                                 <div
                                         class="d-flex align-items-center justify-content-between"
                                 >
-                                    <div style="color: #444e86; margin: auto">
+                                    <div style="color: #36ca0f; margin: auto">
                                         <h5 class="mb-0" style="font-weight: bold">
                                             اجمالى المخرجات
                                         </h5>
