--- a/main/site6.html
+++ b/main/site6.html
@@ -216,14 +216,14 @@
                     </div>
 
                     <div class="col-xl-6 col-md-12 col-12">
-                        <div class="box p-4" style="color: #7a5195">
+                        <div class="box p-4" style="color: #003f5c">
                             <h1 class="fw-500" id="s6-accepted-per"></h1>
                             <p class="fs-4">نسبة المخلفات الصالحة للمعالجة</p>
                             <div class="progress progress-xs mt-10 mb-0 max-w-p90">
                                 <div
                                         class="progress-bar"
                                         role="progressbar"
-                                        style="width: 100%; background-color: #7a5195"
+                                        style="width: 100%; background-color: #003f5c"
                                         aria-valuenow="0"
                                         aria-valuemin="0"
                                         aria-valuemax="100"
@@ -239,7 +239,7 @@
                                     class="d-flex align-items-center justify-content-between"
                             >
                                 <!--                                <img src="../images/import.png" style="height: 60px">-->
-                                <div style="color: #ef5675">
+                                <div style="color: #ef601c">
                                     <h3 class="fw-500" id="s6-ip-box"></h3>
                                     <p class="fs-4">اجمالى وزن المدخلات</p>
                                 </div>
@@ -253,7 +253,7 @@
                                     class="d-flex align-items-center justify-content-between"
                             >
                                 <!--                                <img src="../images/export.png" style="height: 60px">-->
-                                <div style="color: #444e86">
+                                <div style="color: #36ca0f">
                                     <h3 class="fw-500" id="s6-op-box"></h3>
                                     <p class="fs-4">اجمالى وزن المخرجات</p>
                                 </div>
