--- a/main/site2.html
+++ b/main/site2.html
@@ -214,14 +214,14 @@
                     </div>
 
                     <div class="col-xl-6 col-md-12 col-12">
-                        <div class="box p-4" style="color: #7a5195">
+                        <div class="box p-4" style="color: #003f5c">
                             <h1 class="fw-500" id="s2-accepted-per"></h1>
                             <p class="fs-4">نسبة المخلفات الصالحة للمعالجة</p>
                             <div class="progress progress-xs mt-10 mb-0 max-w-p90">
                                 <div
                                         class="progress-bar"
                                         role="progressbar"
-                                        style="width: 100%; background-color: #7a5195"
+                                        style="width: 100%; background-color: #003f5c"
                                         aria-valuenow="0"
                                         aria-valuemin="0"
                                         aria-valuemax="100"
