--- a/main/site2.html
+++ b/main/site2.html
@@ -67,47 +67,6 @@
                             <i class="ti-fullscreen"></i>
                         </a>
                     </li>
-
-                    <!-- User Account-->
-                    <li class="dropdown user user-menu">
-                        <a
-                                href="#"
-                                class="waves-effect waves-light rounded dropdown-toggle"
-                                data-bs-toggle="dropdown"
-                                title="User"
-                        >
-                            <i class="ti-user"></i>
-                        </a>
-                        <ul class="dropdown-menu animated flipInX">
-                            <li class="user-body">
-                                <a class="dropdown-item" href="#"
-                                ><i class="ti-user text-muted me-2"></i> Profile</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                ><i class="ti-wallet text-muted me-2"></i> My Wallet</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                ><i class="ti-settings text-muted me-2"></i> Settings</a
-                                >
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#"
-                                ><i class="ti-lock text-muted me-2"></i> Logout</a
-                                >
-                            </li>
-                        </ul>
-                    </li>
-
-                    <!-- Control Sidebar Toggle Button -->
-                    <li>
-                        <a
-                                href="#"
-                                data-toggle="control-sidebar"
-                                title="Setting"
-                                class="waves-effect waves-light rounded"
-                        >
-                            <i class="ti-settings"></i>
-                        </a>
-                    </li>
                 </ul>
 
                 <button id="signout">تسجيل الخروج</button>
@@ -415,6 +374,18 @@
                 >
                     <span> التاريخ: </span>
                     <input type="text" id="datatableDatePicker" placeholder=""/>
+                </div>
+
+                <div
+                        class="input-group mb-3"
+                        style="display: none; position: absolute; right: 70%;"
+                        id="datatableExportGroup"
+                >
+                    <button id="datatableExport"
+                            onclick="exportToExcel2()">
+                        <span>تحميل</span>
+                        <i class="ti-download"></i>
+                    </button>
                 </div>
 
                 <table id="site2_table" class="table table-striped table-bordered">
