--- a/main/site5.html
+++ b/main/site5.html
@@ -72,46 +72,6 @@
                         </a>
                     </li>
 
-                    <!-- User Account-->
-                    <li class="dropdown user user-menu">
-                        <a
-                                href="#"
-                                class="waves-effect waves-light rounded dropdown-toggle"
-                                data-bs-toggle="dropdown"
-                                title="User"
-                        >
-                            <i class="ti-user"></i>
-                        </a>
-                        <ul class="dropdown-menu animated flipInX">
-                            <li class="user-body">
-                                <a class="dropdown-item" href="#"
-                                ><i class="ti-user text-muted me-2"></i> Profile</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                ><i class="ti-wallet text-muted me-2"></i> My Wallet</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                ><i class="ti-settings text-muted me-2"></i> Settings</a
-                                >
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#"
-                                ><i class="ti-lock text-muted me-2"></i> Logout</a
-                                >
-                            </li>
-                        </ul>
-                    </li>
-
-                    <!-- Control Sidebar Toggle Button -->
-                    <li>
-                        <a
-                                href="#"
-                                data-toggle="control-sidebar"
-                                title="Setting"
-                                class="waves-effect waves-light rounded"
-                        >
-                            <i class="ti-settings"></i>
-                        </a>
-                    </li>
                 </ul>
 
                 <button id="signout">تسجيل الخروج</button>
@@ -421,6 +381,18 @@
                     <input type="text" id="datatableDatePicker" placeholder=""/>
                 </div>
 
+                <div
+                        class="input-group mb-3"
+                        style="display: none; position: absolute; right: 70%;"
+                        id="datatableExportGroup"
+                >
+                    <button id="datatableExport"
+                            onclick="exportToExcel()">
+                        <span>تحميل</span>
+                        <i class="ti-download"></i>
+                    </button>
+                </div>
+
                 <table id="site5_table" class="table table-striped table-bordered">
                     <thead>
                     <tr>
@@ -460,16 +432,13 @@
 
 <script src="js/vendors.min.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 <script src="../assets/vendor_components/jquery.peity/jquery.peity.js"></script>
 <script src="../assets/vendor_components/c3/d3.min.js"></script>
 <script src="../assets/vendor_components/c3/c3.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
-<!--<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>-->
-<!--<script src="../assets/vendor_components/d3/d3.min.js"></script>-->
-<!--<script src="../assets/vendor_components/d3/d3_tooltip.js"></script>-->
 
-<!-- Florence Admin App -->
 <script src="js/template.js"></script>
 <!--<script src="js/pages/dashboard.js"></script>-->
 
