Edit madfan page, synced مرفوضات,

--- a/main/index.html
+++ b/main/index.html
@@ -170,7 +170,7 @@
                                 <div class="box pull-up">
                                     <div class="box-body">
                                         <div class="d-flex align-items-center justify-content-between">
-                                            <div style="color: #ffd800; margin: auto">
+                                            <div style="color: #ffa014; margin: auto">
                                                 <h5 class="mb-0" style="font-size: small">
                                                     مخلفات تصلح للمعالجة
                                                 </h5>
@@ -368,6 +368,8 @@
                                         onchange="updateCentersInputGraph_total()"
                                 >
 
+                                    <option value="today">اليوم</option>
+                                    <option value="yesterday">أمس</option>
                                     <option value="last7days">اسبوع</option>
                                     <option value="last14days">اسبوعين</option>
                                     <option value="lastMonth">الشهر الماضى</option>
