Fixed excel report column headers

--- a/main/site2.html
+++ b/main/site2.html
@@ -382,7 +382,7 @@
                         id="datatableExportGroup"
                 >
                     <button id="datatableExport"
-                            onclick="exportToExcel2()">
+                            onclick="exportToExcel()">
                         <span>تحميل</span>
                         <i class="ti-download"></i>
                     </button>
@@ -404,7 +404,6 @@
                         <th class="searchable-column">التاريخ</th>
                         <th class="searchable-column">وقت الوزن الأول</th>
                         <th class="searchable-column">وقت الوزن الثانى</th>
-                        <th class="searchable-column">المصنع</th>
                     </tr>
                     </thead>
                     <tbody></tbody>
