Fixed "Madfan" page. Fixed site name to السمبلاوين

--- a/main/index.html
+++ b/main/index.html
@@ -125,11 +125,11 @@
                                 </li>
                                 <li>
                                     <a href="site4.html"
-                                    ><i class="ti-more"></i>بلقاس - المصنع</a
+                                    ><i class="ti-more"></i>بلقاس</a
                                     >
                                 </li>
                                 <li>
-                                    <a href="site5.html"><i class="ti-more"></i>السمبلاوين</a>
+                                    <a href="site5.html"><i class="ti-more"></i>السنبلاوين</a>
                                 </li>
                                 <li>
                                     <a href="site6.html"><i class="ti-more"></i>المنزلة</a>
@@ -363,13 +363,13 @@
                     <div class="col-xl-12 col-12">
                         <div class="box">
 
-                            <button id="openPopupBtn">تغيير الأهداف</button>
+                            <button id="openPopupBtn">تغيير الكميات المستهدفة</button>
 
                             <div id="popupContainer" class="popup">
                                 <div class="popup-content">
                                     <span class="close" id="closePopupBtn">&times;</span>
                                     <h2 style="font-size: 21px;">
-                                        تغيير أهداف المدخلات لكل مركز
+                                        تغيير الكميات المستهدفة لمدخلات لكل مركز
                                     </h2>
                                     <form id="dataInputForm">
                                     </form>
