--- a/main/site4.html
+++ b/main/site4.html
@@ -8,7 +8,7 @@
     <meta name="author" content=""/>
     <link rel="icon" href="../images/favicon.ico"/>
 
-    <title>بلقاس - المصنع</title>
+    <title>بلقاس</title>
 
     <!-- Vendors Style-->
     <link rel="stylesheet" href="css/vendors_css.css"/>
@@ -133,11 +133,11 @@
                                 </li>
                                 <li>
                                     <a href="site4.html"
-                                    ><i class="ti-more"></i>بلقاس - المصنع</a
+                                    ><i class="ti-more"></i>بلقاس</a
                                     >
                                 </li>
                                 <li>
-                                    <a href="site5.html"><i class="ti-more"></i>السمبلاوين</a>
+                                    <a href="site5.html"><i class="ti-more"></i>السنبلاوين</a>
                                 </li>
                                 <li>
                                     <a href="site6.html"><i class="ti-more"></i>المنزلة</a>
