--- a/main/site6.html
+++ b/main/site6.html
@@ -131,11 +131,11 @@
                                 </li>
                                 <li>
                                     <a href="site4.html"
-                                    ><i class="ti-more"></i>بلقاس - المصنع</a
+                                    ><i class="ti-more"></i>بلقاس</a
                                     >
                                 </li>
                                 <li>
-                                    <a href="site5.html"><i class="ti-more"></i>السمبلاوين</a>
+                                    <a href="site5.html"><i class="ti-more"></i>السنبلاوين</a>
                                 </li>
                                 <li>
                                     <a href="site6.html"><i class="ti-more"></i>المنزلة</a>
