--- a/main/site3.html
+++ b/main/site3.html
@@ -133,11 +133,11 @@
                                 </li>
                                 <li>
                                     <a href="site4.html"
-                                    ><i class="ti-more"></i>بلقاس - المصنع</a
+                                    ><i class="ti-more"></i>بلقاس</a
                                     >
                                 </li>
                                 <li>
-                                    <a href="site5.html"><i class="ti-more"></i>السمبلاوين</a>
+                                    <a href="site5.html"><i class="ti-more"></i>السنبلاوين</a>
                                 </li>
                                 <li>
                                     <a href="site6.html"><i class="ti-more"></i>المنزلة</a>
@@ -195,7 +195,7 @@
                     <!--                        </div>-->
                     <!--                    </div>-->
 
-                    <div class="col-xl-6 col-md-6 col-12">
+                    <div class="col-xl-12 col-md-6 col-12">
                         <div class="box p-4">
                             <div class="d-flex align-items-center justify-content-between">
                                 <!--                                <img src="../images/import.png" style="height: 60px">-->
@@ -221,59 +221,59 @@
                     <!--                        </div>-->
                     <!--                    </div>-->
 
-                    <div class="col-xl-6 col-md-6 col-12">
-                        <div class="box p-4" style="height: 135px; justify-content: center">
-                            <!--                            <button class="edit-button" style="position: absolute; top: 0; left: 0;">Edit</button>-->
-                            <a
-                                    href="#"
-                                    class="rounded d-none d-md-inline-block mx-10 push-btn"
-                                    role="button"
-                                    style="position: absolute; top: 0; left: 0"
-                                    onclick="toggleInputField()()"
-                            >
-                                <i class="ti-pencil" id="evapEditButton"></i>
-                            </a>
+                    <!--                    <div class="col-xl-6 col-md-6 col-12">-->
+                    <!--                        <div class="box p-4" style="height: 135px; justify-content: center">-->
+                    <!--                            &lt;!&ndash;                            <button class="edit-button" style="position: absolute; top: 0; left: 0;">Edit</button>&ndash;&gt;-->
+                    <!--                            <a-->
+                    <!--                                    href="#"-->
+                    <!--                                    class="rounded d-none d-md-inline-block mx-10 push-btn"-->
+                    <!--                                    role="button"-->
+                    <!--                                    style="position: absolute; top: 0; left: 0"-->
+                    <!--                                    onclick="toggleInputField()()"-->
+                    <!--                            >-->
+                    <!--                                <i class="ti-pencil" id="evapEditButton"></i>-->
+                    <!--                            </a>-->
 
-                            <div
-                                    class="row d-flex align-items-center justify-content-between"
-                            >
-                                <!--                                <div>-->
-                                <!--                                    <select id="mass-dateRangeDropdown-s3" onchange="updateInputGraph_s3(-->
-                                <!--                                        <option value="last7days">اسبوع</option>-->
-                                <!--                                        <option value="last14days">اسبوعين</option>-->
-                                <!--                                        <option value="lastMonth">الشهر الماضى</option>-->
-                                <!--                                        &lt;!&ndash;                                    <option value="lastYear">Last Year</option>&ndash;&gt;-->
-                                <!--                                    </select>-->
-                                <!--                                </div>-->
+                    <!--                            <div-->
+                    <!--                                    class="row d-flex align-items-center justify-content-between"-->
+                    <!--                            >-->
+                    <!--                                &lt;!&ndash;                                <div>&ndash;&gt;-->
+                    <!--                                &lt;!&ndash;                                    <select id="mass-dateRangeDropdown-s3" onchange="updateInputGraph_s3(&ndash;&gt;-->
+                    <!--                                &lt;!&ndash;                                        <option value="last7days">اسبوع</option>&ndash;&gt;-->
+                    <!--                                &lt;!&ndash;                                        <option value="last14days">اسبوعين</option>&ndash;&gt;-->
+                    <!--                                &lt;!&ndash;                                        <option value="lastMonth">الشهر الماضى</option>&ndash;&gt;-->
+                    <!--                                &lt;!&ndash;                                        &lt;!&ndash;                                    <option value="lastYear">Last Year</option>&ndash;&gt;&ndash;&gt;-->
+                    <!--                                &lt;!&ndash;                                    </select>&ndash;&gt;-->
+                    <!--                                &lt;!&ndash;                                </div>&ndash;&gt;-->
 
-                                <p class="col-6 fs-4">صافى الوزن</p>
-                                <h3 class="col-6 fw-500" id="s3-mass-box"></h3>
-                                <div id="evapInputContainer" style="display: none">
-                                    <label for="evap_rate">نسبة التبخر</label>
-                                    <input
-                                            type="text"
-                                            id="evap_rate"
-                                            style="border-radius: 6px; width: 50px"
-                                    />
-                                    <button
-                                            onclick="saveEvapInput()"
-                                            style="border: 0; border-radius: 11px; height: 30px"
-                                    >
-                                        حفظ
-                                    </button>
-                                    <p id="validationError" style="color: red; display: none">
-                                        برجاء ادخال رقم اقل من 1
-                                    </p>
-                                    <p
-                                            id="validationMessage"
-                                            style="color: green; display: none"
-                                    >
-                                        تم حفظ النسبة الجديدة
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <!--                                <p class="col-6 fs-4">صافى الوزن</p>-->
+                    <!--                                <h3 class="col-6 fw-500" id="s3-mass-box"></h3>-->
+                    <!--                                <div id="evapInputContainer" style="display: none">-->
+                    <!--                                    <label for="evap_rate">نسبة التبخر</label>-->
+                    <!--                                    <input-->
+                    <!--                                            type="text"-->
+                    <!--                                            id="evap_rate"-->
+                    <!--                                            style="border-radius: 6px; width: 50px"-->
+                    <!--                                    />-->
+                    <!--                                    <button-->
+                    <!--                                            onclick="saveEvapInput()"-->
+                    <!--                                            style="border: 0; border-radius: 11px; height: 30px"-->
+                    <!--                                    >-->
+                    <!--                                        حفظ-->
+                    <!--                                    </button>-->
+                    <!--                                    <p id="validationError" style="color: red; display: none">-->
+                    <!--                                        برجاء ادخال رقم اقل من 1-->
+                    <!--                                    </p>-->
+                    <!--                                    <p-->
+                    <!--                                            id="validationMessage"-->
+                    <!--                                            style="color: green; display: none"-->
+                    <!--                                    >-->
+                    <!--                                        تم حفظ النسبة الجديدة-->
+                    <!--                                    </p>-->
+                    <!--                                </div>-->
+                    <!--                            </div>-->
+                    <!--                        </div>-->
+                    <!--                    </div>-->
 
                     <div class="col-xl-4 col-12">
                         <div class="box">
@@ -303,13 +303,6 @@
                                     <option value="last14days">اسبوعين</option>
                                     <option value="lastMonth">الشهر الماضى</option>
                                 </select>
-                            </div>
-
-                            <div>
-                                <select
-                                        id="ip-clientDropdown-s3"
-                                        onchange="updateInputGraph_s3()"
-                                ></select>
                             </div>
 
                             <div class="box-header with-border">
@@ -359,44 +352,47 @@
                     <!--                    </div>-->
                 </div>
 
-                <!--                <div class="input-group mb-3"-->
-                <!--                     style="display: none; position: absolute; right: 35%"-->
-                <!--                     id="datatableDatePickerGroup">-->
-                <!--                    <span> التاريخ: </span>-->
-                <!--                    <input type="text" id="datatableDatePicker" placeholder=""/>-->
-                <!--                </div>-->
+                <div
+                        class="input-group mb-3"
+                        style="display: none; position: absolute; right: 35%"
+                        id="datatableDatePickerGroup"
+                >
+                    <span> التاريخ: </span>
+                    <input type="text" id="datatableDatePicker" placeholder=""/>
+                </div>
 
-                <!--                <div class="input-group mb-3"-->
-                <!--                     style="display: none; position: absolute; right: 70%;"-->
-                <!--                     id="datatableExportGroup">-->
-                <!--                    <button id="datatableExport"-->
-                <!--                            onclick="exportToExcel()">-->
-                <!--                        <span>تحميل</span>-->
-                <!--                        <i class="ti-download"></i>-->
-                <!--                    </button>-->
-                <!--                </div>-->
+                <div
+                        class="input-group mb-3"
+                        style="display: none; position: absolute; right: 70%;"
+                        id="datatableExportGroup"
+                >
+                    <button id="datatableExport"
+                            onclick="exportToExcel()">
+                        <span>تحميل</span>
+                        <i class="ti-download"></i>
+                    </button>
+                </div>
 
-                <!--                <table id="site3_table" class="table table-striped table-bordered">-->
-                <!--                    <thead>-->
-                <!--                    <tr>-->
-                <!--                        <th class="searchable-column">رقم التذكرة</th>-->
-                <!--                        <th class="searchable-column">نوع الشحنة</th>-->
-                <!--                        <th class="searchable-column">اسم الصنف</th>-->
-                <!--                        <th class="searchable-column">العميل</th>-->
-                <!--                        &lt;!&ndash;                        <th class="searchable-column">المحافظة</th>&ndash;&gt;-->
-                <!--                        <th class="searchable-column">اسم السائق</th>-->
-                <!--                        <th class="searchable-column">رقم السيارة</th>-->
-                <!--                        <th class="searchable-column">الوزن الاول (كجم)</th>-->
-                <!--                        <th class="searchable-column">الوزن الثاني (كجم)</th>-->
-                <!--                        <th class="searchable-column">صافي الوزن (كجم)</th>-->
-                <!--                        <th class="searchable-column">التاريخ</th>-->
-                <!--                        <th class="searchable-column">وقت الوزن الأول</th>-->
-                <!--                        <th class="searchable-column">وقت الوزن الثانى</th>-->
-                <!--                        <th class="searchable-column">المصنع</th>-->
-                <!--                    </tr>-->
-                <!--                    </thead>-->
-                <!--                    <tbody></tbody>-->
-                <!--                </table>-->
+                <table id="site3_table" class="table table-striped table-bordered">
+                    <thead>
+                    <tr>
+                        <th class="searchable-column">رقم التذكرة</th>
+                        <th class="searchable-column">نوع الشحنة</th>
+                        <th class="searchable-column">اسم الصنف</th>
+                        <th class="searchable-column">العميل</th>
+                        <!--                        <th class="searchable-column">المحافظة</th>-->
+                        <th class="searchable-column">اسم السائق</th>
+                        <th class="searchable-column">رقم السيارة</th>
+                        <th class="searchable-column">الوزن الاول (كجم)</th>
+                        <th class="searchable-column">الوزن الثاني (كجم)</th>
+                        <th class="searchable-column">صافي الوزن (كجم)</th>
+                        <th class="searchable-column">التاريخ</th>
+                        <th class="searchable-column">وقت الوزن الأول</th>
+                        <th class="searchable-column">وقت الوزن الثانى</th>
+                    </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
             </section>
             <!-- /.content -->
         </div>
@@ -405,13 +401,13 @@
 
 <!-- Vendor JS -->
 <script src="js/authentication.js"></script>
-<script>
-    isAuthenticated().then(function (authenticated) {
-        if (!authenticated) {
-            window.location.href = "login.html";
-        }
-    });
-</script>
+<!--<script>-->
+<!--    isAuthenticated().then(function (authenticated) {-->
+<!--        if (!authenticated) {-->
+<!--            window.location.href = "login.html";-->
+<!--        }-->
+<!--    });-->
+<!--</script>-->
 
 <script src="js/vendors.min.js"></script>
 
