Increased range of datatable selected date

--- a/main/site1.html
+++ b/main/site1.html
@@ -372,13 +372,8 @@
                     </div>
                 </div>
 
-                <div
-                        class="input-group mb-3"
-                        style="display: none; position: absolute; right: 35%;"
-                        id="datatableDatePickerGroup"
-                >
-                    <span> التاريخ: </span>
-                    <input type="text" id="datatableDatePicker" placeholder=""/>
+                <div class="input-group mb-3" style="width: 200px; margin-top: auto">
+                    <input type="text" class="form-control" id="datatableDateRangePicker"/>
                 </div>
 
                 <div
