--- a/main/site3.html
+++ b/main/site3.html
@@ -372,11 +372,11 @@
                     <thead>
                     <tr>
                         <th class="searchable-column">رقم التذكرة</th>
-                        <th class="searchable-column">نوع الشحنة</th>
-                        <th class="searchable-column">اسم الصنف</th>
                         <th class="searchable-column">العميل</th>
+                        <th class="searchable-column">الوحدة المحلية</th>
+                        <th class="searchable-column">نوع الشحنة</th>
+                        <!--                        <th class="searchable-column">اسم الصنف</th>-->
                         <!--                        <th class="searchable-column">المحافظة</th>-->
-                        <th class="searchable-column">اسم السائق</th>
                         <th class="searchable-column">رقم السيارة</th>
                         <th class="searchable-column">الوزن الاول (كجم)</th>
                         <th class="searchable-column">الوزن الثاني (كجم)</th>
@@ -384,6 +384,7 @@
                         <th class="searchable-column">التاريخ</th>
                         <th class="searchable-column">وقت الوزن الأول</th>
                         <th class="searchable-column">وقت الوزن الثانى</th>
+                        <th class="searchable-column">اسم السائق</th>
                     </tr>
                     </thead>
                     <tbody></tbody>
